--- a/lib/mustachio/views/index.haml
+++ b/lib/mustachio/views/index.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title mustachify.me
+    %title googlio
     = haml :ga
     :css
       img {
@@ -26,20 +26,8 @@
         color: grey;
       }
   %body
-    %a{:href => "http://github.com/afeld/mustachio"}
-      %img{:style => "position: absolute; top: 0; right: 0; border: 0;", :src => "https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png", :alt => "Fork me on GitHub"}
-    %img{:src => "/#{@stache_num}?src=#{DEMO_IMAGE}"}
+    %img{:src => "/#{@eye_num}?src=#{DEMO_IMAGE}"}
     %form.url-entry{ action: '', method: 'get' }
-      #{@site}/#{@stache_num}?src=<input class="url-input" type="text" name="src" placeholder="IMAGE_URL"/>
+      #{@site}/#{@eye_num}?src=<input class="url-input" type="text" name="src" placeholder="IMAGE_URL"/>
       %input{ type: 'submit', value: 'Go' }
     #footer
-      Created by
-      %a{:href => "http://afeld.me"}<
-        Aidan Feldman
-      \- thanks to
-      %a{:href => "https://github.com/benburkert"}<
-        Ben Burkert
-      and
-      %a{:href => "http://www.heroku.com"}<
-        Heroku
-      for hosting.
